--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "clsx": "^2.1.0",
     "lucide": "^0.309.0",
     "lucide-react": "^0.309.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.4",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
+    "svix": "^1.15.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
